--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,11 @@
 
     .day-status-today {
         box-shadow: 0 0 0 3px rgba(0, 0, 0, .3);
+        transition: .3s;
+    }
+    .day-status-today.clickable:hover {
+        cursor: pointer;
+        box-shadow: 0 0 0 4px rgba(0, 0, 0, .4);
     }
 
 }
