Planned Events Create support

--- a/src/index.css
+++ b/src/index.css
@@ -6,32 +6,23 @@
 
     .clickable {
         cursor: pointer;
-        /*
-        box-shadow: 0 0 0 3px rgba(0, 0, 0, .3);
-        */
-        border: 4px solid rgba(0, 0, 0, .3);
+        border: 4px solid transparent;
+
+        &.has-border-inside, &:hover {
+            border-color: rgba(0, 0, 0, .3);
+        }
+
         transition: .1s;
     }
 
     .clickable:hover {
         border-width: 6px;
-        /*
-        box-shadow: 0 0 0 4px rgba(0, 0, 0, .4);
-        */
     }
 
     .day-status-has-notes {
         box-shadow: 0 0 0 3px rgba(0, 0, 0, .3);
     }
 
-    /*
-    .day-status-today {
-        box-shadow: 0 0 0 3px rgba(0, 0, 0, .3);
-    }
-    .day-status-yesterday {
-        box-shadow: 0 0 0 3px rgba(0, 0, 0, .3);
-    }
-    */
     .btn-primary {
         @apply py-1 px-2 bg-blue-600 text-white text-sm font-semibold rounded-md shadow-md transition-all
         hover:bg-blue-700
