Planned Events Set as Missed added, Streamline showing Planned Events until the day after tomorrow (included)

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,11 @@
         hover:bg-blue-700
         focus:outline-none focus:ring focus:ring-blue-400 focus:ring-opacity-75;
     }
+    .btn-warning {
+        @apply py-1 px-2 bg-yellow-600 text-white text-sm font-semibold rounded-md shadow-md transition-all
+        hover:bg-yellow-700
+        focus:outline-none focus:ring focus:ring-yellow-400 focus:ring-opacity-75;
+    }
 
     .exercise-record {
         @apply bg-gray-200 px-1 py-1 rounded-md flex flex-wrap gap-2 items-center;
