HomePage with Calendars Grids, Timelines Grids and Streamline improved

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@
         hover:bg-blue-700
         focus:outline-none focus:ring focus:ring-blue-400 focus:ring-opacity-75;
     }
+
     .btn-warning {
         @apply py-1 px-2 bg-yellow-600 text-white text-sm font-semibold rounded-md shadow-md transition-all
         hover:bg-yellow-700
@@ -32,6 +33,45 @@
 
     .exercise-record {
         @apply bg-gray-200 px-1 py-1 rounded-md flex flex-wrap gap-2 items-center;
+    }
+
+    .main-section-grids {
+        margin: auto;
+        width: calc((280px + 40px) * 3 + 280px);
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        gap: 40px;
+    }
+
+    .calendar-grid {
+        tr {
+            width: 280px;
+
+            td {
+                margin: 0;
+                padding: 0;
+
+                .date-div {
+                    width: 40px;
+                    height: 36px;
+                    padding: 4px;
+                }
+            }
+        }
+    }
+
+    .calendar-grid {
+        width: 280px;
+    }
+
+    .streamline,
+    .timelines-grids {
+        width: calc(280px * 2 + 40px);
+    }
+
+    .calendar-title {
+        height: 44px;
     }
 
 }
