Tabs list added, Tab History and Tab Todos added

--- a/src/index.css
+++ b/src/index.css
@@ -90,7 +90,40 @@
 
     .placed-calendar-management {
         height: 252px;
-        overflow-y: auto;
+
+        .close-btn {
+            @apply btn-primary;
+            height: 30px;
+            margin-bottom: 8px;
+        }
+
+        .tabs-content {
+            height: calc(252px - 76px);
+            overflow-y: auto;
+        }
+    }
+
+    .tabs-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 8px;
+        margin-bottom: 8px;
+
+        .tab-btn {
+            padding: 2px 6px 0 6px;
+            border-radius: 2px;
+            @apply bg-blue-300;
+            border-bottom: 4px solid transparent;
+            transition: .2s;
+
+            &:hover {
+                @apply border-blue-400;
+            }
+
+            &.active {
+                @apply bg-blue-400;
+            }
+        }
     }
 
 }
