Bugfix Calendar Placed Box's Tabs Content Height

--- a/src/index.css
+++ b/src/index.css
@@ -99,7 +99,7 @@
         }
 
         .tabs-content {
-            height: calc(252px - 76px);
+            height: 166px;
             overflow-y: auto;
         }
     }
