Streamline converted in CLI

--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,7 @@
     }
 
     .streamline {
+        height: 204px;
         display: flex;
         flex-direction: column;
         gap: 8px;
@@ -135,6 +136,15 @@
         overflow-y: scroll;
         width: 100%;
         @apply text-gray-700;
+    }
+
+    .pre-btn {
+        font-weight: 600;
+        cursor: pointer;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 
 }
